<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>kitti_sparsevoxelmap_demo</name>
  <version>0.0.1</version>
  <description>kitti_sparsevoxelmap_demo</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license>GPLv3</license>

  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libgui</depend>

  <depend>mola_input_kitti_dataset</depend>
  <depend>mola_yaml</depend>
  <depend>mola_metric_maps</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Entries to make ROS 2 to discover this as a proper package -->
  <build_depend>ros_environment</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>  
  <!-- End -->

</package>
